Complete Styling of the webpage

--- a/index.html
+++ b/index.html
@@ -16,19 +16,20 @@
     <div class="mobile-container">
       <!--header div with the search bar and the search button  -->
       <div class="header">
-        <input type="text" id="search" /><label for="search">
+        <input type="text" id="search"  placeholder=" Search"/><label for="search">
         <button id="search-btn"><i class="fa-solid fa-magnifying-glass"></i></button>
         </label>
       </div>
 
       <!-- favorite meal list container  -->
       <div class="fav-meal-container">
-        <h3>Favorite Recipe</h3>
+        <h2>Favorite Recipe</h2>
+        
         <!-- meals list -->
        <div class="fav-meal-list-container">
         <ul class="fav-meal-list-ul" style="list-style: none;">
             <li class="fav-meal-list">
-              <img src="https://www.themealdb.com/images/media/meals/wvpsxx1468256321.jpg" alt="" class="fav-meal-img" /><span>Meat Casserole</span>
+              <img src="https://www.themealdb.com/images/media/meals/wvpsxx1468256321.jpg" alt="" class="fav-meal-img" /><span>Casserole</span>
             </li>
             <li class="fav-meal-list">
               <img src="https://www.themealdb.com/images/media/meals/xxyupu1468262513.jpg" alt="" class="fav-meal-img" /><span>Fish</span>
@@ -47,8 +48,10 @@
 
         <!--Random meal container  -->
             <div class="random-meal-container">
-                <div class="meal-img"><img src="https://www.themealdb.com/images/media/meals/wurrux1468416624.jpg" alt=""></div>
-                <div class="meal-body">Savoury Tart<button id='fav-btn'><i class="fa-solid fa-heart fa-bounce"></i></button></div>
+               <div class="random-meal">
+                <img class="meal-img" src="https://www.themealdb.com/images/media/meals/wurrux1468416624.jpg" alt="">
+                <div class="meal-body">Savoury Tart<button id='fav-btn'><i class="fa-solid fa-heart"></i></button></div>
+               </div>
             </div>
         </div>
     </div>
